# NEST-SynElProf

./: .gitignore  README.md  annual_results.xlsx  electric_load_italian_distribution.py  example.py  fig_for_paper.py  main.py  pyproject.toml  richardsonpy_main.py  setup.py  table.xlsx
synelprof/: electric_load_italian_distribution.py  functions.py
synelprof/profiles_df/: Dishwasher.parquet  Electric_hobs.parquet  Electric_oven.parquet  Freezer.parquet  Fridge.parquet  PC.parquet  Tumble_dryer.parquet  Washing_machine.parquet
