[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nest-synelprof"
version = "v0.1.0"
authors = [
  { name="Enrico Prataviera", email="enrico.prataviera@unipd.it" },
]
dependencies = [
        "matplotlib",
        "scipy",
        "numpy",
        "pandas",
        "pyarrow",
        "fastparquet",
    ]

description = "This repository is a small python library to create, for an Italian case study, synthetic electric consumption profiles for residential dwelling."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    'Development Status :: 1 - Planning',
    'Intended Audience :: Education',
    'Operating System :: OS Independent',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.9'
]

[project.optional-dependencies]
dev = [
    "matplotlib",
    "setuptools",
    "pytest",
]

[project.urls]
Homepage = 'https://github.com/BETALAB-team/NEST-SynElProf'

[tool.setuptools]
packages  = [
"synelprof",
"synelprof.profiles_df",
]

[tool.setuptools.package-data]
myModule = ["*.csv"]
myModule = ["*.parquet"]
